--- a/src/main/res/xml/changelog.xml
+++ b/src/main/res/xml/changelog.xml
@@ -17,6 +17,9 @@
   -->
 
 <changelog>
+	<version name="1.1.3">
+		<text>More featured themers</text>
+	</version>
     <version name="1.1.2">
         <text>Display information about the Google authorization that is requested on the first run</text>
     </version>
